@@ -33,6 +33,7 @@
     * Remove Net::SSLeay#get1_session method.
     * Remove Net::SSLeay#set_session method.
     * Remove Net::SSLeay::SSL_SESSION class.
+    * Remove Net::SSLeay#load_error_strings method.
     
   [Bug Fix]
     * Fix bugs of Net::SSLeay#get0_alpn_selected method.
